chore: 프로젝트 기반 설정 및 모듈 구조 초기화
- Cargo.toml: edition 2024 -> 2021 수정, lib/bin 섹션 추가
- src/lib.rs: 라이브러리 루트 생성
- src/core/mod.rs: core 모듈 정의

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,18 @@
 [package]
 name = "koing"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+description = "macOS Korean-English auto-converter"
+license = "MIT"
+
+[lib]
+name = "koing"
+path = "src/lib.rs"
+
+[[bin]]
+name = "koing"
+path = "src/main.rs"
 
 [dependencies]
+
+[dev-dependencies]
