chore: macOS 시스템 API 의존성 추가
- core-graphics, core-foundation (CGEventTap, 키 이벤트)
- cocoa, objc (NSStatusBar, 클립보드)
- log, env_logger (로깅)
- cargo-bundle 메타데이터 추가

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,21 @@ name = "koing"
 path = "src/main.rs"
 
 [dependencies]
+# macOS system APIs
+core-graphics = "0.24"
+core-foundation = "0.10"
+cocoa = "0.26"
+objc = "0.2"
+
+# Logging
+log = "0.4"
+env_logger = "0.11"
 
 [dev-dependencies]
+
+[package.metadata.bundle]
+name = "Koing"
+identifier = "com.koing.app"
+category = "public.app-category.utilities"
+short_description = "Korean-English auto-converter for macOS"
+osx_minimum_system_version = "13.0"
