feat(detection): 자동 한글 감지 및 클립보드 버그 수정
- 클립보드 복원 딜레이 50ms → 300ms로 증가
  - Cmd+V 처리 전 클립보드 복원되는 race condition 해결
- 자동 감지 모듈(detection/) 추가
  - 휴리스틱 기반 한글/영어 판별 (바이그램, 자음/모음 비율)
  - Space/Enter 입력 시 자동 변환 트리거
  - 기본 threshold 70점, 최소 길이 3자

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ core-foundation = "0.10"
 cocoa = "0.26"
 objc = "0.2"
 
+# Utilities
+lazy_static = "1.5"
+
 # Logging
 log = "0.4"
 env_logger = "0.11"
