--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ core-foundation = "0.10"
 cocoa = "0.26"
 objc = "0.2"
 
+# Serialization
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+
 # Utilities
 lazy_static = "1.5"
 
