--- a/resources/Info.plist
+++ b/resources/Info.plist
@@ -14,6 +14,8 @@
 	<string>__VERSION__</string>
 	<key>CFBundleExecutable</key>
 	<string>koing</string>
+	<key>CFBundleIconFile</key>
+	<string>AppIcon</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
